pebbles/drivers/provisioning/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "{name}"
spec:
  selector:
    name: "{name}"
  ports:
  - port: 8888
    protocol: TCP
    targetPort: {target_port}
