pebbles/drivers/provisioning/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: kube-system
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            # allow access to the outside world, block private networks
            except:
              - 192.168.0.0/16
              - 10.0.0.0/8
              - 172.16.0.0/12
